# stellar-tracker

./: .gitignore  CMakeLists.txt
data/: halley_observations.csv  test_encke.csv  test_halley.csv
src/: main.cpp
src/algorithms/: fast_orbit_estimator.cpp  fast_orbit_estimator.h  gauss_solver.cpp  gauss_solver.h  initial_orbit_estimator.cpp  initial_orbit_estimator.h  least_squares_determinator.cpp  least_squares_determinator.h  orbital_elements_calculator.cpp  orbital_elements_calculator.h
src/math_utils/: constants.h  earth_position.cpp  earth_position.h  svd_solver.cpp  svd_solver.h  vector_ops.cpp  vector_ops.h
src/models/: observation.h  orbital_elements.h
src/utils/: csv_loader.cpp  csv_loader.h
tests/: benchmark.cpp  test_basic.cpp  test_encke.cpp  test_gauss.cpp  test_halley.cpp  test_math_utils.cpp  test_real_data.cpp
